feat[body]: Added new <div> elements to enable flex displays for the elements of the page. The style.css was updated to implement this

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-p {
-    color: red;
+.navigation {
+    display: flex;
+}
+.body {
+    display: flex;
+}
+.introduction {
+    flex-basis: 40%;
+}
+.main-content {
+    felx-basis: 60%;
 }
