feat[div]: Renamed IDs for flexbox divs to simplify coding. The style guide was also changed to reflect this.

--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
-.navigation {
+.nav {
     display: flex;
+    flex-direction: row;
+    background-color: lightcoral;
+    padding: 10px;
+}
+.nav a {
+    flex-grow: 1;
+    background-color: blanchedalmond;
+    text-align: center;
+    
 }
 .body {
     display: flex;
 }
-.introduction {
+.intro {
     flex-basis: 40%;
 }
-.main-content {
+.content {
     felx-basis: 60%;
 }
