--- a/style.css
+++ b/style.css
@@ -12,10 +12,19 @@
 }
 .body {
     display: flex;
+    background-color: aquamarine;
+    padding: 10px;
 }
 .intro {
-    flex-basis: 40%;
+    /* It should be noted: items will not shrink together. */
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 30%;
+    background-color: violet;
 }
 .content {
-    felx-basis: 60%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    felx-basis: 70%;
+    background-color: yellowgreen;
 }
