feat[intro]: Added a section element back to the introduction page, and included a navigation link for the introduction

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
     flex-basis: 70%;
     background-color: yellowgreen;
 }
+/* The core skills unordered list must be stylized */
+ul {
+
+}
 table, td, th {
     /* Stylize tables to look nice. */
     border: 2px solid black;
