--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    color: white;
+}
 .nav {
     display: flex;
     flex-direction: row;
@@ -20,13 +23,13 @@
     flex-grow: 0;
     flex-shrink: 1;
     flex-basis: 30%;
-    background-color: violet;
+    background-color: rgb(155, 48, 48);
 }
 .content {
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 70%;
-    background-color: yellowgreen;
+    background-color: rgb(73, 12, 12);
 }
 /* The core skills unordered list must be stylized */
 ul {
@@ -38,5 +41,5 @@ table, td, th {
 }
 /* The tables MUST have alternating colored rows */
 table tr:nth-child(even) {
-    background-color: rgb(207, 207, 207);
+    background-color: rgb(155, 48, 48);
 }
