--- a/style.css
+++ b/style.css
@@ -43,3 +43,6 @@ table, td, th {
 table tr:nth-child(even) {
     background-color: rgb(155, 48, 48);
 }
+ol li:nth-child(even) {
+    float: right;
+}
