--- a/style.css
+++ b/style.css
@@ -7,9 +7,13 @@
     background-color: lightcoral;
     padding: 10px;
 }
+.nav img {
+    width: 80px;
+    height: 80px;
+}
 .nav a {
     flex-grow: 1;
-    background-color: blanchedalmond;
+    background-color: rgb(155, 48, 48);
     text-align: center;
     
 }
@@ -24,6 +28,11 @@
     flex-shrink: 1;
     flex-basis: 30%;
     background-color: rgb(155, 48, 48);
+}
+.intro img {
+    width: 400px;
+    height: auto;
+
 }
 .content {
     flex-grow: 1;
