--- a/style.css
+++ b/style.css
@@ -63,15 +63,23 @@ th {
 }
 td {
     height: 80px;
+    padding: 10px;
 }
 table tr:nth-child(even) {
     background-color: rgb(155, 48, 48);
 }
 
-
-ol li:nth-child(even) img {
+ol img {
     float: right;
 }
-ol li:nth-child(odd) p {
+ol li:nth-child(even) img {
     float: left;
+}
+ol li {
+    clear: both;
+    padding: 20px;
+}
+ol li p {
+    text-align: center;
+    padding: 10px;
 }
