--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .nav {
     display: flex;
     flex-direction: row;
-    background-color: lightcoral;
+    background-color: rgb(73, 12, 12);
     padding: 10px;
 }
 .nav img {
@@ -16,10 +16,11 @@
     flex-grow: 1;
     background-color: rgb(155, 48, 48);
     text-align: center;
+    padding: 25px;
 }
 .body {
     display: flex;
-    background-color: aquamarine;
+    background-color: rgb(73, 12, 12);
     padding: 10px;
 }
 .intro {
@@ -28,17 +29,21 @@
     flex-shrink: 1;
     flex-basis: 30%;
     background-color: rgb(155, 48, 48);
+    padding: 20px;
 }
 h2 {
     font-size: 20px;
+    text-align: center;
+    font-weight: bold;
 }
 .intro img {
     width: 400px;
     height: auto;
-
+    border: 14px solid rgb(182, 146, 62);
+    border-style: ridge;
 }
 .bar {
-    background-color: white;
+    background-color: rgb(182, 146, 62);
     height: 8px;
 }
 .content {
@@ -48,11 +53,11 @@ h2 {
     background-color: rgb(73, 12, 12);
     padding: 50px;
 }
-/* The core skills unordered list must be stylized */
+/* Unordered list ( core skills ) */
 ul {
     list-style-type: square;
 }
-
+/* Tables */
 table {
     border: 2px solid rgb(182, 146, 62);
     text-align: center;
@@ -68,9 +73,13 @@ td {
 table tr:nth-child(even) {
     background-color: rgb(155, 48, 48);
 }
-
+/* Ordered list ( interests ) */
+ol {
+    list-style-type: upper-roman;
+}
 ol img {
     float: right;
+    width: 200px;
 }
 ol li:nth-child(even) img {
     float: left;
@@ -81,5 +90,7 @@ ol li {
 }
 ol li p {
     text-align: center;
-    padding: 10px;
+}
+ol a img:hover {
+    border: 2px solid gold;
 }
